[package]
name = "ng-clp"
description = "ng-clp (no-grammar definition command-line parser)"
version = "0.2.1"
edition = "2021"
authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
license = "MIT/Apache-2.0"
keywords = ["cli", "parser"]
categories = ["command-line-interface"]
homepage = "https://github.com/tos-kamiya/ng-clp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
